--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>my first website</title>
+      <title>Human being, musician, programmer</title>
       <link rel="stylesheet" href="style.css" />
    </head>
    <body>
@@ -10,7 +10,7 @@
       </div>
       <div class="heading">work</div>
       <ul class="horiz-ul">
-         <li><a target="_blank" href="//musicputty.com">Music Putty (Co-founder, CTO)</a></li>
+         <li><a target="_blank" href="//musicputty.com" class="mp">Music Putty (Co-founder, CTO)</a></li>
          <li><a target="_blank" href="//kcpr.org">KCPR</a></li>
          <li><a target="_blank" href="//edufii.com">Edufii</a></li>
       </ul>
