--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <html>
    <head>
-      <title>Human being, musician, programmer</title>
+      <title>Massimo Siboldi</title>
       <link rel="stylesheet" href="style.css" />
    </head>
    <body>
-      <div class="title">
-         <h1>Massimo Siboldi</h1>
-         <div class="self-portrait"></div>
+      <div id="menu">
+         <h1 name="default">Massimo Siboldi</h1>
+         <h2>Full Stack Web Developer</h2>
+         <div class="heading">work</div>
+         <ul class="vert-ul">
+            <li name="mupu"><a target="_blank" href="//musicputty.com" class="mp">Music Putty</a></li>
+            <li name="kcpr"><a target="_blank" href="//kcpr.org">KCPR</a></li>
+            <li name="edufii"><a target="_blank" href="//edufii.com">Edufii</a></li>
+         </ul>
+         <div class="heading">music</div>
+         <ul class="vert-ul">
+            <li><a target="_blank" href="//soundcloud.com/dreamingandweaving">dreamweaver</a></li>
+         </ul>
+         <div class="heading">contact</div>
+         <ul class="vert-ul">
+            <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
+            <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
+            <li><a target="_blank" href="https://github.com/mdsib">mdsib on github</a></li>
+         </ul>
       </div>
-      <div class="heading">work</div>
-      <ul class="horiz-ul">
-         <li><a target="_blank" href="//musicputty.com" class="mp">Music Putty (Co-founder, CTO)</a></li>
-         <li><a target="_blank" href="//kcpr.org">KCPR</a></li>
-         <li><a target="_blank" href="//edufii.com">Edufii</a></li>
-      </ul>
-      <div class="heading">music</div>
-      <ul class="horiz-ul">
-         <li><a target="_blank" href="//soundcloud.com/dreamingandweaving">dreamweaver</a></li>
-      </ul>
-      <div class="heading">past</div>
-      <ul class="horiz-ul">
-         <li><a href="/past.gif">gif</a></li>
-         <li><a target="_blank" href="//boardpusher.com/Siboldi">skateboards</a></li>
-      </ul>
-      <div class="heading">contact</div>
-      <ul class="horiz-ul">
-         <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
-         <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
-         <li><a target="_blank" href="https://github.com/mdsib">mdsib on github</a></li>
-      </ul>
+      <div class="content" name="mupu-content">
+         Music Putty was bomb
+      </div>
+      <div class="content" name="kcpr-content">
+         KCPR was bomb
+      </div>
+      <div class="content" name="edufii-content">
+         Edufii was bomb
+      </div>
+      <script src="app.js"></script>
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800' rel='stylesheet' type='text/css'>
    </body>
 </html>
