updated errors with back button, grammar, section visibility

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="content" name="kcpr-content">
             <h1>KCPR</h1>
             <p>KCPR is a community and student run radio station operating out of Cal Poly.</p>
-            <p>As internet director, from 2012-2013, I redesigning and rebuilt an iteration of KCPR's website, in use until 2014. I helped with the site's current iteration, which you can see <a target="_blank" href="//kcpr.org">here</a>.</p>
+            <p>As internet director, from 2012-2013, I redesigned and rebuilt an iteration of KCPR's website, in use until 2014. I helped with the site's current iteration, which you can see <a target="_blank" href="//kcpr.org">here</a>.</p>
       </section>
       <section class="content" name="edufii-content">
             <h1>Edufii</h1>
