--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </section>
       <section class="content" name="edufii-content">
             <h1>Edufii</h1>
-            <p>During Summer of 2013, I was a front end intern for <a href="//edufii.com">Edufii</a>. I helped style their blog, emails, and an iteration of their landing page.</p>
+            <p>During Summer of 2013, I was a front-end intern for <a href="//edufii.com">Edufii</a>. I helped style their blog, emails, and an iteration of their landing page.</p>
       </section>
       <script src="app.js"></script>
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800' rel='stylesheet' type='text/css'>
