--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
          <h2>Full Stack Web Developer</h2>
          <div class="heading">work</div>
          <ul class="vert-ul">
+            <li name="magnifi">Magnifi</li>
             <li name="mupu">Music Putty</li>
             <li name="kcpr">KCPR</li>
             <li name="edufii">Edufii</li>
@@ -30,6 +31,11 @@
       <section class="content music" name="music-content">
             <h1>Music</h1>
             <p>Sometimes I make music under the pseudonym <a target="_blank" href="//soundcloud.com/dreamingandweaving">dreamweaver</a>.</p>
+      </section>
+      <section class="content" name="magnifi-content">
+            <h1>Magnifi</h1>
+            <p>Magnifi is the best way to discover and get tickets to live shows near you. I was a front-end software engineer, helping to reform their web app.</p>
+            <p><a href="https://magnifi.fm" target="_blank">Check it out.</a></p>
       </section>
       <section class="content mupu scrolled" name="mupu-content">
             <h1>Music Putty</h1>
