--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
          </ul>
          <div class="heading">contact</div>
          <ul class="vert-ul">
+            <li><a target="_blank" href="siboldi-massimo-resume-apr-2016.pdf">r&eacute;sum&eacute;</a></li>
             <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
             <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
             <li><a target="_blank" href="https://github.com/mdsib">mdsib on github</a></li>
+
          </ul>
       </nav>
       <a class="button" onclick="onBackButton()">&#8592; back</a>
