remove color styles for now, remove bad call

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" href="style.css" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
-   <body onscroll="lol()">
+   <body>
       <nav>
          <h1 name="default">Massimo Siboldi</h1>
          <h2>Full Stack Web Developer</h2>
