changed style, added little logo, organized some files, added ds_store to git ignore

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
    <head>
       <title>Massimo Siboldi</title>
-      <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="assets/styles/style.css" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
    <body>
       <nav>
-         <h1 name="default">Massimo Siboldi</h1>
-         <h2>Full Stack Web Developer</h2>
+         <div id="nav-header">
+           <img id="nav-header-logo" src="assets/img/ms-tri-logo.svg"></img>
+           <h1 name="default">Massimo Siboldi</h1>
+           <h2>Web Developer</h2>
+         </div>
          <div class="heading">work</div>
          <ul class="vert-ul">
             <li name="magnifi">Magnifi</li>
@@ -22,7 +25,7 @@
          </ul>
          <div class="heading">contact</div>
          <ul class="vert-ul">
-            <li><a target="_blank" href="siboldi-massimo-resume-apr-2016.pdf">r&eacute;sum&eacute;</a></li>
+            <li><a target="_blank" href="assets/docs/siboldi-massimo-resume-apr-2016.pdf">r&eacute;sum&eacute;</a></li>
             <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
             <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
             <li><a target="_blank" href="https://github.com/mdsib">mdsib on github</a></li>
@@ -54,7 +57,7 @@
             <h1>Edufii</h1>
             <p>During Summer of 2013, I was a front-end intern for <a href="//edufii.com">Edufii</a>. I helped style their blog, emails, and an iteration of their landing page.</p>
       </section>
-      <script src="app.js"></script>
-      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800' rel='stylesheet' type='text/css'>
+      <script src="assets/scripts/app.js"></script>
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
    </body>
 </html>
