so many style changes, new expensive pro font is nice

--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 
 <html>
    <head>
-      <title>Massimo Siboldi</title>
+      <title>Massimo Siboldi - Web Dev</title>
+      <link rel="stylesheet" href="assets/styles/fort-condensed-font.css" />
       <link rel="stylesheet" href="assets/styles/style.css" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
    <body>
       <nav>
-         <div id="nav-header">
-           <img id="nav-header-logo" src="assets/img/ms-tri-logo.svg"></img>
-           <h1 name="default">Massimo Siboldi</h1>
-           <h2>Web Developer</h2>
+         <div id="nav-header" name-"default">
+           <a name="default">
+             <img id="nav-header-logo" src="assets/img/ms-tri-logo.svg"></img>
+             <h1 name="default">Massimo Siboldi</h1>
+             <h2>Software Engineer | Web</h2>
+           </a>
          </div>
-         <div class="heading">work</div>
          <ul class="vert-ul">
-            <li name="magnifi">Magnifi</li>
-            <li name="mupu">Music Putty</li>
-            <li name="kcpr">KCPR</li>
-            <li name="edufii">Edufii</li>
+            <li><a name="magnifi">Magnifi</a></li>
+            <li><a name="mupu">Music Putty</a></li>
+            <li><a name="kcpr">KCPR</a></li>
+            <li><a name="edufii">Edufii</a></li>
          </ul>
-         <div class="heading">music</div>
-         <ul class="vert-ul">
-            <li name="music">dreamweaver</li>
-         </ul>
-         <div class="heading">contact</div>
          <ul class="vert-ul">
             <li><a target="_blank" href="assets/docs/siboldi-massimo-resume-apr-2016.pdf">r&eacute;sum&eacute;</a></li>
             <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
@@ -32,7 +29,7 @@
 
          </ul>
       </nav>
-      <a class="button" onclick="onBackButton()">&#8592; back</a>
+      <a class="button" onclick="onBackButton()">&#8592;</a>
       <section class="content music" name="music-content">
             <h1>Music</h1>
             <p>Sometimes I make music under the pseudonym <a target="_blank" href="//soundcloud.com/dreamingandweaving">dreamweaver</a>.</p>
@@ -51,13 +48,14 @@
       <section class="content" name="kcpr-content">
             <h1>KCPR</h1>
             <p>KCPR is a community and student run radio station operating out of Cal Poly.</p>
-            <p>As internet director, from 2012-2013, I redesigned and rebuilt an iteration of KCPR's website, in use until 2014. I helped with the site's current iteration, which you can see <a target="_blank" href="//kcpr.org">here</a>.</p>
+            <p>As internet director, from 2012-2013, I redesigned and built <a href="https://github.com/mdsib/kcpr-website">an iteration</a> of KCPR's website, in use until 2014. I helped with the site's <a href="https://github.com/ebuckthal/kcpr-web">subsequent iteration</a>.</p>
       </section>
       <section class="content" name="edufii-content">
             <h1>Edufii</h1>
-            <p>During Summer of 2013, I was a front-end intern for <a href="//edufii.com">Edufii</a>. I helped style their blog, emails, and an iteration of their landing page.</p>
+            <p>During Summer of 2013, I was a front-end intern for <a href="//edufii.com">Edufii</a>. I helped style their blog, emails, and landing page.</p>
       </section>
+      <div id="test"></div>
       <script src="assets/scripts/app.js"></script>
-      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
    </body>
 </html>
