update resume, online and pdf

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
            </a>
          </div>
          <ul class="vert-ul">
+            <li><a name="disqus">Disqus</a></li>
             <li><a name="magnifi">Magnifi</a></li>
             <li><a name="mupu">Music Putty</a></li>
             <li><a name="kcpr">KCPR</a></li>
             <li><a name="edufii">Edufii</a></li>
          </ul>
          <ul class="vert-ul">
-            <li><a target="_blank" href="assets/docs/siboldi-resume-jun-2016.pdf">r&eacute;sum&eacute;</a></li>
+            <li><a target="_blank" href="assets/docs/siboldi-resume-dec-2016.pdf">r&eacute;sum&eacute;</a></li>
             <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
             <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
             <li><a target="_blank" href="https://github.com/mdsib">mdsib on github</a></li>
@@ -34,10 +35,14 @@
             <h1>Music</h1>
             <p>Sometimes I make music under the pseudonym <a target="_blank" href="//soundcloud.com/dreamingandweaving">dreamweaver</a>.</p>
       </section>
+      <section class="content" name="disqus-content">
+            <h1>Disqus</h1>
+            <p><a href="https://disqus.com" target="_blank">Disqus</a> is an engagement product that helps publishers grow their own audience through community. Commenters and publishers love Disqus, and Disqus loves them back.</p>
+	    <p>At Disqus, I developed features for their embeddable comments, Disqus Home, and their admin site.</p>
+      </section>
       <section class="content" name="magnifi-content">
             <h1>Magnifi</h1>
-            <p>Magnifi is the best way to discover and get tickets to live shows near you. I was a front-end software engineer, helping to reform their web app.</p>
-            <p><a href="https://magnifi.fm" target="_blank">Check it out.</a></p>
+            <p>Magnifi was the best way to discover and get tickets to live shows near you. I was a front-end software engineer, helping to reform their web app.</p>
       </section>
       <section class="content mupu scrolled" name="mupu-content">
             <h1>Music Putty</h1>
