--- a/index.html
+++ b/index.html
@@ -1,66 +1,78 @@
 
 <html>
-   <head>
-      <title>Massimo Siboldi - Web Dev</title>
-      <link rel="stylesheet" href="assets/styles/fort-condensed-font.css" />
-      <link rel="stylesheet" href="assets/styles/style.css" />
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-   </head>
-   <body>
-      <nav>
-         <div id="nav-header" name-"default">
-           <a name="default">
-             <img id="nav-header-logo" src="assets/img/ms-tri-logo.svg"></img>
-             <h1 name="default">Massimo Siboldi</h1>
-             <h2>Software Engineer | Web</h2>
-           </a>
-         </div>
-         <ul class="vert-ul">
-            <li><a name="disqus">Disqus</a></li>
-            <li><a name="magnifi">Magnifi</a></li>
-            <li><a name="mupu">Music Putty</a></li>
-            <li><a name="kcpr">KCPR</a></li>
-            <li><a name="edufii">Edufii</a></li>
-         </ul>
-         <ul class="vert-ul">
-            <li><a target="_blank" href="assets/docs/siboldi-resume-dec-2016.pdf">r&eacute;sum&eacute;</a></li>
-            <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
-            <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
-            <li><a target="_blank" href="https://github.com/mdsib">mdsib on github</a></li>
+  <head>
+    <title>Massimo Siboldi - Web Dev</title>
+    <link rel="stylesheet" href="assets/styles/fort-condensed-font.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <nav>
+      <div id="nav-header" name="default">
+        <a name="default">
+          <img data-home-link name="default" id="nav-header-logo" src="assets/img/ms-tri-logo.svg"></img>
+          <h1 data-home-link name="default">Massimo Siboldi</h1>
+          <h2 data-home-link name="default">Software Engineer | Web</h2>
+        </a>
+      </div>
+      <ul class="vert-ul">
+        <li><a name="disqus">Disqus</a></li>
+        <li><a name="magnifi">Magnifi</a></li>
+        <li><a name="mupu">Music Putty</a></li>
+        <li><a name="kcpr">KCPR</a></li>
+        <li><a name="edufii">Edufii</a></li>
+      </ul>
+      <ul class="vert-ul">
+        <li><a target="_blank" href="assets/docs/siboldi-resume-dec-2016.pdf">r&eacute;sum&eacute;</a></li>
+        <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
+        <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
+        <li><a target="_blank" href="https://github.com/mdsib">mdsib on github</a></li>
 
-         </ul>
-      </nav>
-      <a class="button" onclick="onBackButton()">&#8592;</a>
-      <section class="content music" name="music-content">
-            <h1>Music</h1>
-            <p>Sometimes I make music under the pseudonym <a target="_blank" href="//soundcloud.com/dreamingandweaving">dreamweaver</a>.</p>
-      </section>
-      <section class="content" name="disqus-content">
-            <h1>Disqus</h1>
-            <p><a href="https://disqus.com" target="_blank">Disqus</a> is an engagement product that helps publishers grow their own audience through community. Commenters and publishers love Disqus, and Disqus loves them back.</p>
-	    <p>At Disqus, I developed features for their embeddable comments, Disqus Home, and their admin site.</p>
-      </section>
-      <section class="content" name="magnifi-content">
-            <h1>Magnifi</h1>
-            <p>Magnifi was the best way to discover and get tickets to live shows near you. I was a front-end software engineer, helping to reform their web app.</p>
-      </section>
-      <section class="content mupu scrolled" name="mupu-content">
-            <h1>Music Putty</h1>
-            <p>Music Putty was a crowdfunding platform dedicated to raising money for musicians to tour, record new albums, and pay for new equipment.</p>
-            <p>As co-founder and lead developer, I built Music Putty's web app using angular.js, node.js, MySQL, and Amazon Web Services.</p>
-            <p>More information is available <a target="_blank" href="//musicputty.com">here</a>.</p>
-      </section>
-      <section class="content" name="kcpr-content">
-            <h1>KCPR</h1>
-            <p>KCPR is a community and student run radio station operating out of Cal Poly.</p>
-            <p>As internet director, from 2012-2013, I redesigned and built <a href="https://github.com/mdsib/kcpr-website">an iteration</a> of KCPR's website, in use until 2014. I helped with the site's <a href="https://github.com/ebuckthal/kcpr-web">subsequent iteration</a>.</p>
-      </section>
-      <section class="content" name="edufii-content">
-            <h1>Edufii</h1>
-            <p>During Summer of 2013, I was a front-end intern for <a href="//edufii.com">Edufii</a>. I helped style their blog, emails, and landing page.</p>
-      </section>
-      <div id="test"></div>
-      <script src="assets/scripts/app.js"></script>
-      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
-   </body>
+      </ul>
+    </nav>
+    <a class="button" onclick="onBackButton()">&#8592;</a>
+    <section class="content music" name="music-content">
+      <h1>Music</h1>
+      <main>
+        <p>Sometimes I make music under the pseudonym <a target="_blank" href="//soundcloud.com/dreamingandweaving">dreamweaver</a>.</p>
+        </main>
+    </section>
+    <section class="content" name="disqus-content">
+      <h1>Disqus</h1>
+      <main>
+        <p><a href="https://disqus.com" target="_blank">Disqus</a> is an engagement product that helps publishers grow their own audience through community. Commenters and publishers love Disqus, and Disqus loves them back.</p>
+        <p>At Disqus, I developed features for their embeddable comments, Disqus Home, and their admin site.</p>
+      </main>
+    </section>
+    <section class="content" name="magnifi-content">
+      <h1>Magnifi</h1>
+      <main>
+        <p>Magnifi was the best way to discover and get tickets to live shows near you. I was a front-end software engineer, helping to reform their web app.</p>
+      </main>
+    </section>
+    <section class="content mupu" name="mupu-content">
+      <h1>Music Putty</h1>
+      <main>
+        <p>Music Putty was a crowdfunding platform dedicated to raising money for musicians to tour, record new albums, and pay for new equipment.</p>
+        <p>As co-founder and lead developer, I built Music Putty's web app using angular.js, node.js, MySQL, and Amazon Web Services.</p>
+        <p>More information is available <a target="_blank" href="//musicputty.com">here</a>.</p>
+      </main>
+    </section>
+    <section class="content" name="kcpr-content">
+      <h1>KCPR</h1>
+      <main>
+        <p>KCPR is a community and student run radio station operating out of Cal Poly.</p>
+        <p>As internet director, from 2012-2013, I redesigned and built <a href="https://github.com/mdsib/kcpr-website">an iteration</a> of KCPR's website, in use until 2014. I helped with the site's <a href="https://github.com/ebuckthal/kcpr-web">subsequent iteration</a>.</p>
+      </main>
+    </section>
+    <section class="content" name="edufii-content">
+      <h1>Edufii</h1>
+      <main>
+        <p>During Summer of 2013, I was a front-end intern for <a href="//edufii.com">Edufii</a>. I helped style their blog, emails, and landing page.</p>
+      </main>
+    </section>
+    <div id="test"></div>
+    <script src="assets/scripts/app.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+  </body>
 </html>
