--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <h2 data-home-link name="default">Software Engineer | Web</h2>
         </a>
       </div>
+      <h2>work</h2>
       <ul class="vert-ul">
         <li><a name="disqus">Disqus</a></li>
         <li><a name="magnifi">Magnifi</a></li>
@@ -22,12 +23,16 @@
         <li><a name="kcpr">KCPR</a></li>
         <li><a name="edufii">Edufii</a></li>
       </ul>
+      <h2>more</h2>
+      <ul class="vert-ul">
+        <li><a href="https://massimo.siboldi.com/synthing" name="synthing">SynThing</a>
+      </ul>
+      <h2>links</h2>
       <ul class="vert-ul">
         <li><a target="_blank" href="assets/docs/siboldi-resume-dec-2016.pdf">r&eacute;sum&eacute;</a></li>
         <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
         <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
-        <li><a target="_blank" href="https://github.com/mdsib">mdsib on github</a></li>
-
+        <li><a target="_blank" href="https://github.com/mdsib">I'm on github</a></li>
       </ul>
     </nav>
     <a class="button" onclick="onBackButton()">&#8592;</a>
