--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
     </section>
     <div id="test"></div>
     <script src="assets/scripts/app.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   </body>
 </html>
