Update resume, use correct protocols

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </ul>
       <h2>links</h2>
       <ul class="vert-ul">
-        <li><a target="_blank" href="assets/docs/siboldi-resume-dec-2016.pdf">r&eacute;sum&eacute;</a></li>
+        <li><a target="_blank" href="assets/docs/04-2018-siboldi-resume.pdf">r&eacute;sum&eacute;</a></li>
         <li><a target="_blank" href="mailto:mdsiboldi@gmail.com">mdsiboldi@gmail.com</a></li>
         <li><a target="_blank" href="tel:6509963443">650.996.3443</a></li>
         <li><a target="_blank" href="https://github.com/mdsib">I'm on github</a></li>
@@ -73,11 +73,11 @@
     <section class="content" name="edufii-content">
       <h1>Edufii</h1>
       <main>
-        <p>During Summer of 2013, I was a front-end intern for <a href="//edufii.com">Edufii</a>. I helped style their blog, emails, and landing page.</p>
+        <p>During Summer of 2013, I was a front-end intern for <a href="https://edufii.com">Edufii</a>. I helped style their blog, emails, and landing page.</p>
       </main>
     </section>
     <div id="test"></div>
     <script src="assets/scripts/app.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   </body>
 </html>
